# hexlet-django-blog

./: .gitignore  pyproject.toml
hexlet_django_blog/: asgi.py  settings.py  urls.py  wsgi.py
hexlet_django_blog/article/: views.py
hexlet_django_blog/article/templates/article/: index.html
